Apply eclipse settings, code cleanup pass.